--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,7 @@
         android:textColor="#0000FF"
         android:textStyle="bold"
         android:textSize="40dp"
+        android:fontFamily="sans-serif-medium"
         android:textAlignment="center"/>
 
     <EditText
@@ -30,6 +31,7 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
         android:textColor="#0000FF"
         android:drawableStart="@drawable/ic_baseline_person_24"
         android:background="@drawable/border"
@@ -44,6 +46,7 @@
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textColor="#0000FF"
+        android:fontFamily="sans-serif-light"
         android:drawableStart="@drawable/ic_baseline_lock_24"
         android:background="@drawable/border"
         android:hint="Password"
@@ -57,8 +60,9 @@
         android:text="Forget Password?"
         android:textStyle="bold"
         android:textSize="16dp"
+        android:fontFamily="sans-serif-condensed-light"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="150dp"/>
+        android:layout_marginLeft="250dp"/>
 
     <Button
         android:id="@+id/btnLogin"
@@ -67,6 +71,7 @@
         android:text="Login"
         android:textStyle="bold"
         android:textColor="#fff"
+        android:fontFamily="sans-serif-light"
         android:layout_marginTop="5dp"
         android:layout_gravity="center"
         android:background="@drawable/button_rounded"
@@ -79,6 +84,7 @@
         android:text="Don't have an account? Sign Up"
         android:textSize="16dp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed-light"
         android:textAlignment="center"
         android:layout_marginTop="5dp"
         android:onClick="toRegister"
