--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:textColor="#0000FF"
         android:textStyle="bold"
         android:textSize="40dp"
+        android:fontFamily="sans-serif-medium"
         android:textAlignment="center"/>
 
     <TextView
@@ -30,6 +31,7 @@
         android:textSize="18dp"
         android:textStyle="bold"
         android:textColor="#0000FF"
+        android:fontFamily="sans-serif-condensed-light"
         android:textAlignment="center"/>
 
     <Button
@@ -39,6 +41,7 @@
         android:text="Login"
         android:textStyle="bold"
         android:textColor="#fff"
+        android:fontFamily="sans-serif-light"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:background="@drawable/button_rounded"
@@ -51,6 +54,7 @@
         android:text="Register"
         android:textStyle="bold"
         android:textColor="#fff"
+        android:fontFamily="sans-serif-light"
         android:layout_marginTop="10dp"
         android:background="@drawable/button_rounded"
         android:layout_gravity="center"
