--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,6 +21,7 @@
         android:textColor="#0000FF"
         android:textStyle="bold"
         android:textSize="20dp"
+        android:fontFamily="sans-serif-medium"
         android:textAlignment="center"/>
 
     <EditText
@@ -31,6 +32,7 @@
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textColor="#0000FF"
+        android:fontFamily="sans-serif-light"
         android:drawableStart="@drawable/ic_baseline_person_24"
         android:background="@drawable/border"
         android:hint="Username"
@@ -44,6 +46,7 @@
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textColor="#0000FF"
+        android:fontFamily="sans-serif-light"
         android:drawableStart="@drawable/ic_baseline_lock_24"
         android:background="@drawable/border"
         android:hint="Password"
@@ -58,6 +61,7 @@
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textColor="#0000FF"
+        android:fontFamily="sans-serif-light"
         android:drawableStart="@drawable/ic_baseline_lock_24"
         android:background="@drawable/border"
         android:hint="Confirm Password"
@@ -71,8 +75,10 @@
         android:text="Register"
         android:textStyle="bold"
         android:textColor="#fff"
+        android:fontFamily="sans-serif-light"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:onClick="move1"
         android:background="@drawable/button_rounded"/>
 
     <TextView
@@ -82,6 +88,7 @@
         android:text="Already have an account? Sign In"
         android:textSize="16dp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed-light"
         android:textAlignment="center"
         android:layout_marginTop="5dp"
         android:onClick="move1"
