--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -22,14 +22,6 @@
             android:textStyle="bold"
             android:fontFamily="sans-serif-medium"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Aplikasi Pencarian Kos Online untuk mempermudah dalam mencari Kos."
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-light"
-            android:layout_marginTop="10dp"/>
-
     </LinearLayout>
 
     <LinearLayout
@@ -53,13 +45,13 @@
                     android:id="@+id/t1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Cari Kostan"
-                    android:textSize="30dp"
-                    android:textColor="@color/white"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textStyle="bold"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"/>
+                    android:fontFamily="sans-serif-condensed"
+                    android:text="Cari Kostan"
+                    android:textColor="@color/white"
+                    android:textSize="30dp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
