--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -54,7 +54,7 @@
         android:drawablePadding="10dp"/>
 
     <EditText
-        android:id="@+id/etConPasswordRegister"
+        android:id="@+id/etEmailRegister"
         android:layout_width="350dp"
         android:layout_height="45dp"
         android:layout_marginTop="5dp"
@@ -62,10 +62,9 @@
         android:textStyle="bold"
         android:textColor="#0000FF"
         android:fontFamily="sans-serif-light"
-        android:drawableStart="@drawable/ic_baseline_lock_24"
+        android:drawableStart="@drawable/ic_baseline_email_24"
         android:background="@drawable/border"
-        android:hint="Confirm Password"
-        android:inputType="textPassword"
+        android:hint="Email"
         android:drawablePadding="10dp"/>
 
     <Button
@@ -78,8 +77,7 @@
         android:fontFamily="sans-serif-light"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
-        android:onClick="move1"
-        android:background="@drawable/button_rounded"/>
+        android:backgroundTint="@color/purple_700"/>
 
     <TextView
         android:id="@+id/tvSignIn"
@@ -91,7 +89,6 @@
         android:fontFamily="sans-serif-condensed-light"
         android:textAlignment="center"
         android:layout_marginTop="5dp"
-        android:onClick="move1"
         />
 
 </LinearLayout>
