--- a/app/src/main/res/layout/list_kost.xml
+++ b/app/src/main/res/layout/list_kost.xml
@@ -5,16 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
-        android:id="@+id/text_name"
+        android:id="@+id/kos_nama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
+        android:text="Nama Kos"
         android:textColor="@color/black"
         android:textStyle="bold"/>
     <TextView
-        android:id="@+id/text_email"
+        android:id="@+id/kos_alamat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email"/>
+        android:text="Alamat Kos"/>
 
 </LinearLayout>
