--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             app:cardCornerRadius="15dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -76,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             app:cardCornerRadius="15dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -85,13 +85,13 @@
                 android:padding="10dp">
 
                 <TextView
-                    android:id="@+id/t2"
+                    android:id="@+id/tambahKos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:text="Pindah Kostan"
+                    android:text="Tambah Kos"
                     android:textColor="@color/white"
                     android:textSize="30dp"
                     android:textStyle="bold" />
@@ -99,11 +99,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/t2"
+                    android:layout_below="@+id/tambahKos"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="3dp"
                     android:fontFamily="sans-serif-light"
-                    android:text="Bosan/Tidak Puas?"
+                    android:text="Buka Kos-Kosan"
                     android:textColor="@color/white" />
 
                 <ImageView
@@ -111,7 +111,7 @@
                     android:layout_height="100dp"
                     android:layout_alignParentRight="true"
                     android:maxHeight="100dp"
-                    android:src="@drawable/logo_cari_kos" />
+                    android:src="@drawable/logo_tambah_kosan" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -119,7 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             app:cardCornerRadius="15dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -134,7 +134,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:text="Kebutuhan Kost"
+                    android:text="Tentang KosLine"
                     android:textColor="@color/white"
                     android:textSize="30dp"
                     android:textStyle="bold" />
@@ -146,7 +146,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="3dp"
                     android:fontFamily="sans-serif-light"
-                    android:text="Layanan Bagi Anak Kost"
+                    android:text="Informasi aplikasi KosLine"
                     android:textColor="@color/white" />
 
                 <ImageView
@@ -154,7 +154,7 @@
                     android:layout_height="100dp"
                     android:layout_alignParentRight="true"
                     android:maxHeight="100dp"
-                    android:src="@drawable/logo_cari_kos" />
+                    android:src="@drawable/logo_tentang" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -162,7 +162,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             app:cardCornerRadius="15dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -177,7 +177,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:text="Pindahan Barang"
+                    android:text="Bantuan"
                     android:textColor="@color/white"
                     android:textSize="30dp"
                     android:textStyle="bold" />
@@ -189,7 +189,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="3dp"
                     android:fontFamily="sans-serif-light"
-                    android:text="Butuh Bantuan Pindahan?"
+                    android:text="Butuh Bantuan?"
                     android:textColor="@color/white" />
 
                 <ImageView
@@ -201,5 +201,11 @@
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnLogOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="LogOut"/>
 
 </LinearLayout>
