--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -10,19 +10,19 @@
     tools:context=".EditorActivity">
 
     <EditText
-        android:id="@+id/edit_name"
+        android:id="@+id/edit_nama"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Nama Lengkap"
+        android:inputType="text"
+        android:hint="Nama Kos"
         android:autofillHints=""
         android:layout_marginBottom="10dp"/>
     <EditText
-        android:id="@+id/edit_email"
+        android:id="@+id/edit_alamat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="Email"
+        android:inputType="text"
+        android:hint="Alamat"
         android:autofillHints=""
         android:layout_marginBottom="10dp"/>
     <Button
