--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -16,8 +16,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="KosLine Dashboard"
+            android:text="Selamat Datang"
             android:textSize="35dp"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-medium"/>
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="..."
+            android:textSize="20dp"
             android:textColor="#000"
             android:textStyle="bold"
             android:fontFamily="sans-serif-medium"/>
@@ -203,7 +213,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnLogOut"
+        android:id="@+id/btn_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="LogOut"/>
