--- a/app/src/main/res/layout/activity_masuk.xml
+++ b/app/src/main/res/layout/activity_masuk.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RegisterActivity">
+    tools:context=".MasukActivity">
 
     <ImageView
         android:layout_width="450dp"
@@ -17,32 +17,32 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="Login"
         android:textColor="#0000FF"
         android:textStyle="bold"
-        android:textSize="20dp"
+        android:textSize="40dp"
         android:fontFamily="sans-serif-medium"
         android:textAlignment="center"/>
 
     <EditText
-        android:id="@+id/etUsernameRegister"
+        android:id="@+id/email"
         android:layout_width="350dp"
         android:layout_height="45dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textStyle="bold"
-        android:textColor="#0000FF"
         android:fontFamily="sans-serif-light"
-        android:drawableStart="@drawable/ic_baseline_person_24"
+        android:textColor="#0000FF"
+        android:drawableStart="@drawable/ic_baseline_email_24"
         android:background="@drawable/border"
-        android:hint="Username"
+        android:hint="Email"
         android:drawablePadding="10dp"/>
 
     <EditText
-        android:id="@+id/etPasswordRegister"
+        android:id="@+id/password"
         android:layout_width="350dp"
         android:layout_height="45dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textColor="#0000FF"
@@ -53,42 +53,29 @@
         android:inputType="textPassword"
         android:drawablePadding="10dp"/>
 
-    <EditText
-        android:id="@+id/etEmailRegister"
-        android:layout_width="350dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textColor="#0000FF"
-        android:fontFamily="sans-serif-light"
-        android:drawableStart="@drawable/ic_baseline_email_24"
-        android:background="@drawable/border"
-        android:hint="Email"
-        android:drawablePadding="10dp"/>
-
     <Button
-        android:id="@+id/btnRegister"
+        android:id="@+id/btn_login"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:text="Register"
+        android:text="Login"
         android:textStyle="bold"
         android:textColor="#fff"
         android:fontFamily="sans-serif-light"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:layout_gravity="center"
         android:backgroundTint="@color/purple_700"/>
 
     <TextView
-        android:id="@+id/tvSignIn"
+        android:id="@+id/tv_daftar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Already have an account? Sign In"
+        android:text="Don't have an account? Sign Up"
         android:textSize="16dp"
         android:textStyle="bold"
         android:fontFamily="sans-serif-condensed-light"
         android:textAlignment="center"
         android:layout_marginTop="5dp"
+        android:onClick="toRegister"
         />
 
 </LinearLayout>
